[tool.poetry]
name = "timezone-schedule"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ttkwidgets = "^0.11.0"
geopy = "^2.1.0"
pytz = "^2021.1"
timezonefinder = "^5.2.0"
replit = "^2.0.0"
gmplot = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
